# playwright-pytest-bdd-demo

./: .gitignore  README.md  pyproject.toml
code_docs/: 01_pytest_basics.md  02_fixtures_dependency_injection.md  03_pytest_bdd.md  04_page_object_model.md
code_docs/fixtures/: 01_what_are_fixtures.md  02_dependency_injection.md  03_fixture_scopes.md  04_yield_and_teardown.md  05_fixture_chaining.md  06_conftest_strategy.md
orangehrm/: __init__.py
orangehrm/components/: __init__.py  data_table.py  form.py  side_navigation.py  top_bar.py
orangehrm/models/: __init__.py  auth.py  leave.py  pim.py
orangehrm/pages/: __init__.py  base.py  dashboard_page.py  employee_list_page.py  leave_list_page.py  login_page.py
orangehrm/services/: __init__.py  authentication_service.py  leave_service.py  navigation_service.py  pim_service.py
orangehrm/workflows/: __init__.py  authentication_workflow.py  leave_workflow.py  pim_workflow.py
pages/: base_page.py  pta_login_page.py  pta_successful_page.py  pta_table_page.py  sd_cart_page.py  sd_checkout_complete_page.py  sd_checkout_step_one_page.py  sd_checkout_step_two_page.py  sd_inventory_page.py  sd_login_page.py  sd_product_page.py
tests/: conftest.py  pta_login.feature  sd_login.feature  test_pta_login_steps.py  test_sd_login_steps.py
tests/features/: datatable_examples.feature  parser_examples.feature  practice_test_automation_login.feature  practice_test_automation_table.feature  saucedemo_login.feature
tests/features/orangehrm/: authentication.feature  leave_filter_validation.feature  pim_employee_search.feature
tests/features/saucedemo/: saucedemo_cart_regression.feature  saucedemo_checkout_e2e.feature  saucedemo_inventory_regression.feature
tests/steps/: test_datatable_example_steps.py  test_parser_example_steps.py  test_practice_test_automation_login_steps.py  test_practice_test_automation_table_steps.py  test_saucedemo_login_steps.py
tests/steps/orangehrm/: __init__.py  conftest.py  helpers.py  test_orangehrm_business_steps.py
tests/steps/saucedemo/: conftest.py  helpers.py  test_cart_regression_steps.py  test_checkout_e2e_steps.py  test_inventory_regression_steps.py
